cargo-features = ["public-dependency"]

[package]
name = "fluorophore"
version = "0.1.0"
authors = ["Nick Senger <dev@nsenger.com>"]
edition = "2018"

[dependencies]
mox = { git = "https://github.com/anp/moxie.git", public = true }
moxie = { git = "https://github.com/anp/moxie.git", public = true }
moxie-dom = { git = "https://github.com/anp/moxie.git", public = true }
topo = { git = "https://github.com/anp/moxie.git", public = true }
