cargo-features = ["public-dependency"]

[package]
name = "fluorophore"
version = "0.1.0"
authors = ["Nick Senger <dev@nsenger.com>"]
edition = "2018"

[dependencies]
mox = { git = "https://github.com/anp/moxie.git", public = true, branch = "main" }
moxie = { git = "https://github.com/anp/moxie.git", public = true, branch = "main" }
moxie-dom = { git = "https://github.com/anp/moxie.git", public = true, branch = "main" }
topo = { git = "https://github.com/anp/moxie.git", public = true, branch = "main" }
wasm-bindgen = { version = "^0.2", public = true }
