cargo-features = ["public-dependency"]

[package]
name = "fluorophore"
version = "0.1.0"
authors = ["Nick Senger <dev@nsenger.com>"]
edition = "2018"

[dependencies]
mox = { git = "https://github.com/anp/moxie.git", public = true, rev = "bd7b85f917cd976481e9e45719baab9fa74a782d" }
moxie = { git = "https://github.com/anp/moxie.git", public = true, rev = "bd7b85f917cd976481e9e45719baab9fa74a782d" }
moxie-dom = { git = "https://github.com/anp/moxie.git", public = true, rev = "bd7b85f917cd976481e9e45719baab9fa74a782d" }
topo = { git = "https://github.com/anp/moxie.git", public = true, rev = "bd7b85f917cd976481e9e45719baab9fa74a782d" }
wasm-bindgen = { version = "^0.2", public = true }
